<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="ru.nikshlykov.schoolhelper.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_nav_notes_to_nav_note"
            app:destination="@id/nav_note" />
    </fragment>

    <fragment
        android:id="@+id/nav_schedule"
        android:name="ru.nikshlykov.schoolhelper.ui.schedule.WeekScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_week_schedule" >
        <action
            android:id="@+id/action_nav_schedule_to_homeworkFragment"
            app:destination="@id/nav_homework" />
        <action
            android:id="@+id/action_nav_schedule_to_editDayScheduleFragment"
            app:destination="@id/nav_edit_day_schedule" />
    </fragment>

    <fragment
        android:id="@+id/nav_note"
        android:name="ru.nikshlykov.schoolhelper.ui.notes.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" >
        <argument
            android:name="noteId"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_nav_note_to_nav_notes"
            app:destination="@id/nav_notes" />
    </fragment>

    <fragment
        android:id="@+id/nav_homework"
        android:name="ru.nikshlykov.schoolhelper.ui.schedule.HomeworkFragment"
        android:label="@string/homework"
        tools:layout="@layout/fragment_homework">
        <action
            android:id="@+id/action_homeworkFragment_to_nav_schedule"
            app:destination="@id/nav_schedule" />
        <argument
            android:name="lessonId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_day_schedule"
        android:name="ru.nikshlykov.schoolhelper.ui.schedule.EditDayScheduleFragment"
        android:label="Редактирование дня"
        tools:layout="@layout/fragment_edit_day_schedule">
        <action
            android:id="@+id/action_editDayScheduleFragment_to_nav_schedule"
            app:destination="@id/nav_schedule" />
        <argument
            android:name="dayOfWeek"
            app:argType="integer" />
    </fragment>
</navigation>